Added demo paragraph

--- a/src/azure-sa/public/index.html
+++ b/src/azure-sa/public/index.html
@@ -15,6 +15,7 @@
             <span class="slider round"></span>
         </label>
     </header>
+    <p>This is a demo example</p>
     <main>
         <form id="noteForm">
             <input type="text" id="note" placeholder="Enter file name..." required>
