Added demo text

--- a/src/azure-sa/public/index.html
+++ b/src/azure-sa/public/index.html
@@ -16,6 +16,7 @@
         </label>
     </header>
     <main>
+        <p>This is a demo!</p>
         <form id="noteForm">
             <input type="text" id="note" placeholder="Enter file name..." required>
             <br>
