--- a/src/azure-sa/public/index.html
+++ b/src/azure-sa/public/index.html
@@ -16,7 +16,7 @@
         </label>
     </header>
     <main>
-        <p>This is a demo!</p>
+        <p>Ooops a developer left this bug in here, how did that happen?</p>
         <form id="noteForm">
             <input type="text" id="note" placeholder="Enter file name..." required>
             <br>
